--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,6 +13,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <permission
+        android:name="in.wptrafficanalyzer.locationroutedirectionmapv2.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+ 
+    <uses-permission android:name="in.wptrafficanalyzer.locationroutedirectionmapv2.permission.MAPS_RECEIVE" />
+ 
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     
     <uses-feature
         android:glEsVersion="0x00020000"
